<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PetShop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_animal">NewAnimalActivity</string>
    <string name="addAnimal">Anyadir</string>
    <string name="Animal">Animal</string>
    <string name="location">Localización</string>
    <string name="light">Luz: </string>
    <string name="current_light">Luz actual: </string>
    <string name="current_temperature">Temperatura actual: </string>
    <string name="temperature">Temperatura: </string>
    <string name="save">Guardar</string>
    <string name="Search">Buscar</string>
    <string name="title_activity_animal_details">AnimalDetailsActivity</string>
    <string name="title_activity_widget">WidgetActivity</string>
    <string name="select">Selecciona tu animal favorito</string>
    <string name="edit">Editar</string>
    <string name="Delete">Borrar</string>
    <string name="summary_userName">Tu nombre aquí</string>
    <string name="User_Data">Información de usuario</string>
    <string name="summary_email">Tu email aquí </string>
    <string name="summary_language">Selecciona lenguaje </string>
    <string name="Language">Lenguaje: </string>
    <string name="application_settings">Ajustes</string>
    <string name="pref_contact_name">pref_contact_name</string>
    <string name="pref_contact_email">pref_contact_email</string>
    <string name="pref_set_language">pref_set_language</string>
    <string name="name">Nombre: </string>
    <string name="email">Email: </string>
	<string name="share">Compartir</string>
    <string-array name="empty_array"></string-array>
    <string-array name="languages">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
    <string name="msg_error_attributes">Todos los atributos tienen que tener un valor</string>

    <string name="title_activity_my_settings">MySettingsActivity</string>

</resources>
