<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewAnimalActivity" >

    <TextView
        android:id="@+id/txtAnimalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="18dp"
        android:text="@string/Animal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtAnimalName"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:ems="9" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editLocation"
        android:layout_alignLeft="@+id/txtAnimalName"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLocation"
        android:layout_below="@+id/txtLocation"
        android:layout_marginTop="50dp"
        android:text="@string/light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLight"
        android:layout_below="@+id/txtLight"
        android:layout_marginTop="45dp"
        android:text="@string/temperature"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtTemperature"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/editLightMin"
        android:text="/"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_toRightOf="@+id/TextView02"
        android:ems="6"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editLightMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtTemperature"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/TextView01"
        android:ems="4"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTemperature"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/save" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@+id/txtTemperature"
        android:ems="9" />

    <EditText
        android:id="@+id/editLightMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_toRightOf="@+id/txtAnimalName"
        android:ems="4"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTemperature"
        android:layout_below="@+id/txtTemperature"
        android:layout_marginTop="22dp"
        android:ems="6"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTempMin"
        android:layout_toRightOf="@+id/editTempMin"
        android:text="/"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>